--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
   <input type="file" id="upload" accept="image/*" />
+  <input type="checkbox" id="full_quality" name="full_quality" value="FullQuality">
+  <label for="full_quality"> Run with full quality image</label><br>
 <div>
   <input type="range" id="sample_rate" name="sample_rate" min="0.01" max="0.8" step="0.01" value="0.02" oninput="this.nextElementSibling.value = this.value"/>
       <output>0.02</output>
