--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
   <input type="file" id="upload" accept="image/*" />
   <input type="checkbox" id="full_quality" name="full_quality" value="FullQuality">
   <label for="full_quality"> Run with full quality image</label><br>
-<div>
+
+<div id="info">
   <input type="range" id="sample_rate" name="sample_rate" min="0.01" max="0.8" step="0.01" value="0.02" oninput="this.nextElementSibling.value = this.value"/>
       <output>0.02</output>
   <label for="Sample Rate">Sample Rate</label>
+   <button type="button" id="save_result_button">Save Image</button>
 </div>
-  <canvas id="webgl-canvas"></canvas>
+  <div style="position: relative;">
+    <canvas id="webgl-canvas" style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
+    <canvas id="basic_image_canvas" style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
